--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-react-app",
-  "homepage": "https://RSY6520.github.io/Covid-19_Report",
+  "homepage": "https://RSY6520.github.io/Movie-Project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
